--- a/sv/index.html
+++ b/sv/index.html
@@ -31,7 +31,7 @@
 					<div class="grid-18 o-footer__info">
 						<div class="row">
 							<div class="grid-18 grid-lg-9 o-footer__info__freetext">
-								<p class="o-footer__paragraph"><a href="https://internetstiftelsen.se">Internetstiftelsen</a> verkar för ett internet som bidrar positivt till människan och samhället. Vi är en oberoende organisation som säkerställer en stark och säker infrastruktur för internet i Sverige. Vårt mål är att alla ska våga och kunna använda internet. Vi finns i Sverige och ansvarar för den svenska toppdomänen .se och driften av toppdomänen .nu.</p>
+								<p class="o-footer__paragraph"><a href="https://internetstiftelsen.se" target="_blank">Internetstiftelsen</a> verkar för ett internet som bidrar positivt till människan och samhället. Vi är en oberoende organisation som säkerställer en stark och säker infrastruktur för internet i Sverige. Vårt mål är att alla ska våga och kunna använda internet. Vi finns i Sverige och ansvarar för den svenska toppdomänen .se och driften av toppdomänen .nu.</p>
 							</div>
 							<div class="grid-18 grid-lg-9 o-footer__info__contact">
 								<div class="row o-footer__info__contact__row-first">
