change file structure

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -14,7 +14,7 @@
 		<meta name="msapplication-config" content="https://static.internetstiftelsen.se/favicons/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
 		<base href="/en/">
-		<link rel="stylesheet" href="../assets/css/site.css">
+		<link rel="stylesheet" href="../../assets/css/site.css">
 		<script>
 			var cl = document.querySelector('html').classList; cl.remove('no-js'); cl.add('js');
 		</script>
@@ -167,9 +167,9 @@
 			<p>Please enable javascript to use this site!</p>
 		</noscript>
 
-		<script src="../en/runtime.faf8f5694cfc0105.js"></script>
-		<script src="../en/polyfills.8c668a65c41cb99e.js"></script>
-		<script src="../en/main.ef0566da35fef63c.js"></script>
+		<script src="runtime.faf8f5694cfc0105.js"></script>
+		<script src="polyfills.8c668a65c41cb99e.js"></script>
+		<script src="main.15365d3e99f53595.js"></script>
 		<script src="../assets/js/site-all.js"></script>
 
 		<script>
