--- a/public/sv/index.html
+++ b/public/sv/index.html
@@ -14,7 +14,7 @@
 		<meta name="msapplication-config" content="https://static.internetstiftelsen.se/favicons/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
 		<base href="/sv/">
-		<link rel="stylesheet" href="../assets/css/site.css">
+		<link rel="stylesheet" href="../../assets/css/site.css">
 		<script>
 			var cl = document.querySelector('html').classList; cl.remove('no-js'); cl.add('js');
 		</script>
@@ -164,9 +164,9 @@
 			<p>Vänligen aktivera javascript för att använda sajten!</p>
 		</noscript>
 
-		<script src="../sv/runtime.faf8f5694cfc0105.js" type="module"></script>
-		<script src="../sv/polyfills.8c668a65c41cb99e.js" type="module"></script>
-		<script src="../sv/main.ef0566da35fef63c.js" type="module"></script>
+		<script src="runtime.faf8f5694cfc0105.js" type="module"></script>
+		<script src="polyfills.8c668a65c41cb99e.js" type="module"></script>
+		<script src="main.15365d3e99f53595.js" type="module"></script>
 		<script src="../assets/js/site-all.js" type="module"></script>
 
 		<script>
