update js-files and add manual cachebuster to css

--- a/public/sv/index.html
+++ b/public/sv/index.html
@@ -14,7 +14,7 @@
 		<meta name="msapplication-config" content="https://static.internetstiftelsen.se/favicons/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
 		<base href="/sv/">
-		<link rel="stylesheet" href="../../assets/css/site.css">
+		<link rel="stylesheet" href="../../assets/css/site.css?v=0.123">
 		<script>
 			var cl = document.querySelector('html').classList; cl.remove('no-js'); cl.add('js');
 		</script>
@@ -166,7 +166,7 @@
 
 		<script src="runtime.faf8f5694cfc0105.js" type="module"></script>
 		<script src="polyfills.8c668a65c41cb99e.js" type="module"></script>
-		<script src="main.99b1987ff4d3a02a.js" type="module"></script>
+		<script src="main.869c1cd5aee03b9f.js" type="module"></script>
 		<script src="../assets/js/site-all.js" type="module"></script>
 
 		<script>
